# django-boilerplate-code

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  commit-msg.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy.yml
core/: cache.py  constants.py  managers.py  middleware.py  models.py  pagination.py  viewsets.py
core/management/commands/: makeapp.py  startapp.py
core/serializers/: base.py
core/utils/: common.py
src/: celery.py  settings.py  swagger.py  urls.py
src/settings/: __init__.py  base.py  local.py  loggers.py  prod.py
users/: admin.py  managers.py  urls.py
users/api/v1/: urls.py
users/api/v1/serializers/: auth.py  user.py
users/api/v1/views/: authentication.py
users/constants/: generic.py
users/migrations/: 0001_initial.py
users/models/: user.py
users/tests/: test_models.py  test_serializers.py  test_views.py
